--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 2rem;
+  font-family: HelveticaNeue-Medium,Helvetica,Arial,Lucida Grande,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
