--- a/src/molecules/leg-info/leg-info.scss
+++ b/src/molecules/leg-info/leg-info.scss
@@ -12,4 +12,13 @@
     &__leg-info-time {
         font-size: 1.5rem;
     }
+
+    &__leg-info-name-mobile {
+        font-size: .8rem;
+        line-height: 1.5rem;
+    }
+
+    &__leg-info-time-mobile {
+        font-size: .5rem;
+    }
 }
