--- a/src/molecules/flight-action/flight-action.scss
+++ b/src/molecules/flight-action/flight-action.scss
@@ -11,6 +11,49 @@
         .flightNo {
             font-size: 1.2rem;
         }
+        .flightNo-mobile {
+            font-size: 1rem;
+        }
+
+
+        .flight-button {
+            font-size: 1.2rem;
+            line-height: 19px;
+            font-weight: 700;
+            margin: 10px;
+            background: #c60c30;
+            border: 0;
+            color: #fff;
+            padding: 10px 15px;
+            border-radius: 3px;
+        }
+
+        .flight-button-mobile {
+            font-size: 1rem;
+            line-height: 19px;
+            font-weight: 700;
+            margin: 10px;
+            background: #c60c30;
+            border: 0;
+            color: #fff;
+            padding: 10px 15px;
+            border-radius: 3px;
+        }
+
+    }
+
+    &__select-mobile {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+        border-left: 1px #DDD dashed;
+        padding-left: 10px;
+
+        .flightNo {
+            font-size: 1.2rem;
+        }
 
         .flight-button {
             font-size: 1.2rem;
