--- a/src/molecules/route-info/route-info.scss
+++ b/src/molecules/route-info/route-info.scss
@@ -11,10 +11,34 @@
         padding: 34px;
         box-shadow: 0 1px 4px 0 rgb(0, 0, 0 / 20%);
         background-color: #fff;
+
+    }
+
+    &__container-mobile {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        text-align: center;
+        border: 2px;
+        width: 93%;
+        height: 150px;
+        margin: 25px auto;
+        box-shadow: 0 1px 4px 0 rgb(0, 0, 0 / 20%);
+        background-color: #fff;
     }
 
     &__container.selected {
         @extend .route-info__container;
+        border: 2px  #15700e solid;
+    
+        .flight-button {
+            background: #15700e;
+        }
+
+    }
+
+    &__container-mobile.selected {
+        @extend .route-info__container-mobile;
         border: 2px  #15700e solid;
     
         .flight-button {
